Team budget planner done!

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ demo_output.png
 designShellOutput.png
 design_shell.docx
 Design_Shell.zip
+mainPage.png
+programManagerPage.png
+FinanceTeamsPage.png
+teamBudgetPlanner.docx
+Team_Budget_Planner.zip
