Simply Blogging done!

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ programManagerPage.png
 FinanceTeamsPage.png
 teamBudgetPlanner.docx
 Team_Budget_Planner.zip
+SimplyBloggingTop.png
+SimplyBloggingBottom.png
+SimplyBlogging.docx
