Cart project done!

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ SimplyBloggingTop.png
 SimplyBloggingBottom.png
 SimplyBlogging.docx
 Simply_Blogging.zip
+castIndexPage.png
+cartCheckoutPage.png
+cart_report.docx
+Cart.zip
