Amazing Portfolio done!

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ castIndexPage.png
 cartCheckoutPage.png
 cart_report.docx
 Cart.zip
+amazingPortfolioLogIn.png
+amazingPortfolioSignUp.png
+amazingPortfolioContacts.png
+amazingPortfolioReport.docx
+AmazingPortfolio.zip
