Task Tracker and Online Test done!

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ amazingPortfolioSignUp.png
 amazingPortfolioContacts.png
 amazingPortfolioReport.docx
 AmazingPortfolio.zip
+onlineTestStartPage.png
+onlineTestQuestionPage.png
+onlineTestFinalQuestionPage.png
+onlineResultPage1.png
+onlineResultPage2.png
+onlineTestReport.docx
+TaskTracker.png
+TaskTrackerReport.docx
+OnlineTest.zip
+TaskTracker.zip
