Log records done!

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ TaskTracker.png
 TaskTrackerReport.docx
 OnlineTest.zip
 TaskTracker.zip
+logEmployee.png
+logEmployeeouput.png
+logEmployeeReport.docx
