Task Planner done

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ logEmployee.png
 logEmployeeouput.png
 logEmployeeReport.docx
 LogRecords.zip
+taskTracker1.png
+taskTracker2.png
+taskPlannerReport.docx
+TaskPlanner.zip
