bug fixes and gitignore update

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,14 @@ Chatting.zip
 callRecord.png
 callRecord.docx
 index.js.zip
+Mongo1.png
+Mongo2.png
+Mongo3.png
+Mongo4.png
+Mongo5.png
+MongodbWeb.zip
+MongodbWebReport.docx
+MongoChat1.png
+MongoChat2.png
+MongoCharReport.docx
+MongoChat.zip
